...
                        }
                        .padding(.leading)
                        Spacer()
                    }
                    .padding(.top, 35)
                    HStack {
                        TextField("Search any recipes", text: $searchText)
                            .accessibilityIdentifier("Search any recipes")
                            .padding(10)
                        Image(systemName: "magnifyingglass")
                            .foregroundColor(.gray)
                            .padding(.trailing, 10)
                    }
...
