...
    var body: some View {
        ScrollView {
            Spacer()
            HStack{
                VStack (alignment: .leading){
                    Text(dessertDetail.name)
                        .accessibilityIdentifier("DetailTitle")
                        .font(.title2)
                        .fontWeight(.heavy)
                        .fixedSize(horizontal: false, vertical: true)
                        .padding(.trailing)
                    Text("\(dessertDetail.region)")
                        .foregroundColor(Color.gray)
...
